Update GradleExecutorUI.java